# Rurix

./: .cursor_subagent_write_probe.txt  .gitattributes  .gitignore  00_MASTER_INDEX.md  01_VISION_AND_MISSION.md  02_USERS_AND_USE_CASES.md  03_POSITIONING_AND_LANDSCAPE.md  04_DESIGN_PRINCIPLES.md  05_LANGUAGE_ARCHITECTURE.md  06_GPU_GRAPHICS_PROGRAMMING_MODEL.md  07_COMPILER_ARCHITECTURE.md  08_RUNTIME_AND_TOOLING.md  09_STDLIB_AND_ECOSYSTEM.md  10_GOVERNANCE.md  11_ROADMAP.md  12_RISKS.md  13_DECISION_LOG.md  14_ENGINEERING_DISCIPLINE.md  BLACKHOLE_DEMO_CONTEXT.md  CHANGELOG.md  CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  Cargo.toml  G2.2_HYBRID_DECISION_PACKAGE.md  LICENSE-MIT  OVERVIEW.en.md  README.en.md  README.md  SECURITY.en.md  SECURITY.md  UE5_RENDER_GAP_ANALYSIS.md  requirements.txt  rurix-godot-showcase.html  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
agents/: AGENTS.md
bench/: __init__.py  async_buffer_bench.py  bandwidth_bench.py  compile_bench.py  compile_cuda_ref.py  compile_triple_run.py  compute_sanitizer_run.py  cublas_driver.py  cublas_gemm_bench.py  cublas_gemv_bench.py  cuda_driver.py  cuda_ref_triple.py  env_probe.py  frontend_triple_run.py  gemm_tile_bench.py  gemm_tile_cuda_bench.py  gemv_cuda_bench.py  gen_lsp_workspace.py  lexer_bench.py  lock_clocks.py  lsp_bench.py  lsp_latency_triple.py  m5_bench_all.py  m8_perf_backfill.py  parser_bench.py  proc_guard.py  protocol.py  reduce_bench.py  reduce_cuda_bench.py  resolve_ptx.py  rurix_gemm_tile_triple.py  rurix_reduce_triple.py  rurix_saxpy_bench.py  rurix_saxpy_triple.py  rurix_scan_triple.py  saxpy_bench.py  saxpy_cuda_bench.py  scan_bench.py  (+12 more)
src/image-io/: Cargo.toml  rurix.toml
src/image-io/src/: lib.rs
src/rurix-android-present/: Cargo.toml  build.rs
src/rurix-android-present/src/: lib.rs
src/rurix-cublas/: Cargo.toml
src/rurix-cublas/src/: ffi.rs  lib.rs  sys.rs
src/rurix-d3d12/: Cargo.toml  build.rs
src/rurix-d3d12/shim/: present.hlsl  rx_d3d12_shim.cpp
src/rurix-d3d12/src/: lib.rs
src/rurix-engine/: Cargo.toml
src/rurix-engine/harness/: engine_host.cpp  uc05_engine_host.cpp
src/rurix-engine/include/: rurix_engine.h
src/rurix-engine/src/: ffi.rs  lib.rs
src/rurix-geometry/: Cargo.toml
src/rurix-geometry/src/: lib.rs
src/rurix-godot/: Cargo.toml  README.md  build.rs
src/rurix-godot/include/: rurix_godot.h
src/rurix-godot/shim/: rxgd_luminance_record.cpp
src/rurix-godot/src/: lib.rs
src/rurix-interop/: Cargo.toml  build.rs
src/rurix-interop/pyd/: CMakeLists.txt  pyproject.toml
src/rurix-interop/pyd/src/: binding.cpp
src/rurix-interop/src/: ffi.rs  lib.rs
src/rurix-pkg/: Cargo.toml
src/rurix-pkg/src/: content_tree.rs  error.rs  lib.rs  lock.rs  manifest.rs  resolve.rs  sha256.rs  toml.rs  vendor.rs
src/rurix-pkg/tests/: edition_corpus.rs
src/rurix-rt/: Cargo.toml  build.rs
src/rurix-rt-cabi/: Cargo.toml
src/rurix-rt-cabi/src/: artifacts.rs  imageio.rs  lib.rs  present.rs
src/rurix-rt/compile-fail/: async_buffer_alloc_incomplete.rs  async_buffer_cross_stream_unsync.rs  async_buffer_use_after_free.rs  cross_context.rs  handle_lifetime.rs  signal_timing.rs
src/rurix-rt/examples/: async_buffer_pipeline.rs
src/rurix-rt/kernels/: gemm_tile.rx  reduce.rx  saxpy.rx  scan.rx  transpose.rx
src/rurix-rt/src/: backend.rs  error.rs  fatbin.rs  graph.rs  interop.rs  lib.rs  pipeline.rs  rhi.rs  sampler.rs  sys.rs  vk.rs
src/rurix-rt/tests/: gpu_roundtrip.rs
src/rurixc/: Cargo.toml
src/rurixc/examples/: emit_binding_rts0.rs  emit_grx009_texture_rts0.rs  emit_grx010_tonemap_rts0.rs  emit_grx011_ssao_blur_rts0.rs  emit_grx012_taa_resolve_rts0.rs  emit_grx013_particles_copy_rts0.rs  emit_grx014_cluster_store_rts0.rs  emit_grx015_gpu_culling_rd_native_rts0.rs  emit_grx015_gpu_culling_rts0.rs  emit_grx016_instance_compaction_rts0.rs  emit_grx018_indirect_args_rts0.rs  emit_grx019_fused_post_chain_rts0.rs  emit_spirv_provenance.rs  emit_uc04_dxil.rs
src/rurixc/src/: ast.rs  binding_layout.rs  borrow_check.rs  codegen.rs  coloring.rs  const_eval.rs  dataflow.rs  device_codegen.rs  diag.rs  driver.rs  drop_elab.rs  dxil_codegen.rs  dxil_sig_gate.rs  dxil_spirv.rs  export_c.rs  feature_gate.rs  fmt.rs  hir.rs  launch_check.rs  lexer.rs  lib.rs  lossless.rs  lower.rs  messages.rs  mir.rs  mir_build.rs  mod_assembly.rs  move_check.rs  parser.rs  profile.rs  ptxas.rs  query.rs  render.rs  resolve.rs  shader_stages.rs  shared_check.rs  source_map.rs  span.rs  tbir.rs  tbir_build.rs  (+6 more)
src/rurixc/src/messages/: en.messages  zh.messages
src/rurixc/src/tooling/: diag_json.rs  ide_query.rs  json_util.rs  lsp.rs  mod.rs  session.rs
src/rurixc/tests/: atomics_corpus.rs  atomics_ptx_mapping.rs  bindless_vulkan_spirv_val.rs  borrowck_corpus.rs  coloring_corpus.rs  desugar_corpus.rs  dxil_corpus.rs  dxil_golden.rs  export_c_corpus.rs  fmt_corpus.rs  host_orch_corpus.rs  launch_corpus.rs  libdevice_corpus.rs  libdevice_link_mapping.rs  mesh_rt_vulkan_spirv_val.rs  mir_golden.rs  pipeline_consistency.rs  ptx_golden.rs  ptxas_gate.rs  resolve_corpus.rs  sampling_vulkan_spirv_val.rs  shader_corpus.rs  shared_corpus.rs  stdlib_corpus.rs  syntax_corpus.rs  toolchain_corpus.rs  uc05_corpus.rs  ui_golden.rs  views_corpus.rs
src/rurixup/: Cargo.toml
src/rurixup/src/: bundle.rs  channel.rs  e2e.rs  fetch.rs  gate.rs  install.rs  lib.rs  main.rs  sbom.rs  shim.rs  signing.rs  toolchain.rs
src/rx/: Cargo.toml
src/rx/src/: doc.rs  main.rs
src/rx/tests/: cli.rs
src/soft-raster/: Cargo.toml
src/soft-raster/src/: lib.rs
src/uc02-demo/: Cargo.toml
src/uc02-demo/compile-fail/: cross_stream_unsync.rs  cross_thread_send.rs  double_free.rs  use_after_move.rs
src/uc02-demo/src/: main.rs
src/uc03-demo/: Cargo.toml
src/uc03-demo/src/: lib.rs  present.rs
src/uc04-demo/: Cargo.toml  build.rs
src/uc04-demo/shim/: uc04_offscreen.cpp
src/uc04-demo/src/: barrier.rs  deferred.rs  device.rs  error.rs  lib.rs  main.rs  present.rs  pso.rs  readback.rs
src/uc04-demo/tests/: d6_crosscheck.rs
(+1890 files in other folders)
