# rurixc workspace(D-201:实现语言 Rust;M1.1 起 src/ 实体化)
# crate 划分最小起步,按需拆分(M1_PLAN §1)
[workspace]
resolver = "2"
members = ["src/rurixc", "src/rurix-rt", "src/rx", "src/rurix-pkg", "src/image-io", "src/soft-raster", "src/uc02-demo", "src/uc03-demo", "src/rurix-interop", "src/rurix-cublas", "src/rurixup", "src/rurix-d3d12", "src/rurix-engine"]

[workspace.package]
edition = "2024"
version = "0.1.0"
publish = false
license = "MIT OR Apache-2.0"        # D-003:MVP 后 Apache-2.0 + MIT 双许可开源

[workspace.lints.rust]
unsafe_code = "deny"        # unsafe 纪律(10 §7.6):出现 unsafe 前须先建 unsafe-audit 注册条目,届时按块豁免

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"
