[package]
name = "rurix-pkg"
description = "Rurix 包管理子系统(M6.2,09 §7.1/§7.2,spec/toolchain.md RXS-0089~0094)——rurix.toml 三来源解析 + 依赖解析图 + rurix.lock + 内容树 SHA-256 + 离线路径;零外部依赖(手写 TOML 子集解析 + 手写 SHA-256),纯函数·确定性,为 M6.3 逐字节复现铺底"
edition.workspace = true
version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
# 零外部依赖(全仓纪律,供应链可信根):手写 TOML 子集解析 + 手写 SHA-256

[lints]
workspace = true
