[package]
name = "rurixc"
description = "Rurix compiler (M1.1: diagnostics foundation - Span/SourceMap/DiagCtxt/messages)"
edition.workspace = true
version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
# M1.1 起消息表为自有行格式;M6.4 RD-004 接通 rowan 式无损语法树(07 §9)
rowan = "0.15.1"

[features]
# G2.1 着色阶段类型面(RFC-0002 §6;RXS-0153~0156)。默认启用以使标准
# `cargo build/test -p rurixc` 覆盖着色阶段前端;`--no-default-features` 时着色阶段
# 语法/类型面不参与编译(parser 不识别 `<stage> fn` 前缀关键字,着色阶段检查与
# 错误码 RX3011~3013 不可达)。
default = ["shader-stages"]
shader-stages = []

# G2.2 DXIL 第二后端(RFC-0003 §6 / §9 Q-Gate;RXS-0157)。默认**不**启用——
# DXIL 后端为 MIR 之后的第二 codegen 路径,gate 后不参与编译,PTX 路径(D-207)
# 不受影响(RFC-0003 §4.5)。`cargo build/test -p rurixc --features dxil-backend`
# 启用 `--target dxil` 分发与 dxil_codegen 模块;patched llc 经 RURIX_LLC dev env
# 定位(受控临时偏差,RD-011),不写死 / 不改 committed D-205 pin。
dxil-backend = []

# mb1 Vulkan/SPIR-V 跨端第三后端(RFC-0011 §6;RXS-0200~）。默认**不**启用——Vulkan
# 后端为 MIR 之后的第三 codegen 路径(与 NVPTX/DXIL 并列),gate 后不参与编译,PTX
# 路径(D-207)不受影响(RFC-0003 §4.5 口径)。`cargo build/test -p rurixc --features
# vulkan-backend` 启用 `--target vulkan` 分发与 vulkan_codegen 模块(MIR→SPIR-V,
# compute 首片空体 GLCompute → spirv-val clean)。**gated on owner 裁决红线 3 解除 +
# RFC-0011 批准,未获裁决前实现 PR 不合入 main(见 milestones/mb1/OWNER_DECISION_PACKAGE.md)。**
vulkan-backend = []

# G2.3 PR-E2b-4 device 真跑支撑工具(非生产 codegen):落盘绑定布局 RTS0 容器字节供
# D3D12 CreateRootSignature 真机核验(ci/dxil_binding_device_smoke.py)。须 dxil-backend。
[[example]]
name = "emit_binding_rts0"
required-features = ["dxil-backend"]

# G2.4 UC-04 device 真跑支撑工具(非生产 codegen):把 UC-04 几何 pass Rurix 着色源经
# 图形=B DXIL 链落盘 DXIL 容器字节供 D3D12 graphics PSO 真机创建(ci/dxil_uc04_device_smoke.py)。
# 须 dxil-backend + shader-stages + pin B 工具(spirv-cross / dxc)。
[[example]]
name = "emit_uc04_dxil"
required-features = ["dxil-backend", "shader-stages"]

# mb1 Phase 3 red_self_test 支撑工具(非生产 codegen;RXS-0210):图形着色源经
# `dxil_spirv::emit_spirv_body`(provenance=true)落盘 SPIR-V 供 ci/vulkan_graphics_smoke.py
# 反证。须 dxil-backend + shader-stages(既有缺口勘误:此前缺 required-features 条目,
# `cargo test -p rurixc` 单包〔无 --workspace 特性合一〕编译该 example 即红;镜像上两条)。
[[example]]
name = "emit_spirv_provenance"
required-features = ["dxil-backend", "shader-stages"]

# G3.3 PR-S3 采样模式着色器 SPIR-V 合法性机验(RXS-0223~0230):消费 dxil_spirv::
# emit_spirv_body_vulkan + toolchain::locate_spirv_val,须 dxil-backend + shader-stages
# (缺 required-features 时,不带该 feature 集的 rurixc tests 构建〔如 LSP smoke〕编译红;
# 镜像上三条既有缺口勘误)。
[[test]]
name = "sampling_vulkan_spirv_val"
required-features = ["dxil-backend", "shader-stages"]

# G3.4 PR-K1 bindless 模式着色器 SPIR-V 合法性机验(RXS-0231~0235):消费 dxil_spirv::
# emit_spirv_body_vulkan + toolchain::locate_spirv_val,须 dxil-backend + shader-stages
# (G3.4 落地轮缺该条目,`cargo test -p rurixc`〔默认 feature 集〕编译即红——#175 三轮红
# 教训「新 test 必登 required-features」的本轮勘误;镜像 sampling_vulkan_spirv_val)。
[[test]]
name = "bindless_vulkan_spirv_val"
required-features = ["dxil-backend", "shader-stages"]

[lints]
workspace = true
