[package]
name = "rx"
description = "Rurix 工具链 CLI(rx)——子命令分发 + 核心子命令 build/run/check/fmt/bench/vendor;经 rurixc query 层单一前端 + rurix-pkg 包管理(M6.1/M6.2,08 §7 D-239,09 §7.1/§7.2,spec/toolchain.md RXS-0083~0094)"
edition.workspace = true
version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
rurixc = { path = "../rurixc" }
rurix-pkg = { path = "../rurix-pkg" }

[features]
# G2.2 DXIL 第二后端透传(RXS-0157):`cargo build -p rx --features dxil-backend`
# 启用 rurixc 的 `--target dxil` codegen 后端。默认不启用(PTX 路径 D-207 不受影响)。
dxil-backend = ["rurixc/dxil-backend"]

[lints]
workspace = true
