[package]
name = "uc03-demo"
description = "Rurix UC-03 旗舰验收 demo(M7.4,D-M7-4,契约 G-M7-1,01 §6 旗舰用例)——确定性 SPH 仿真 + G0 软光栅出图 + image-io PPM 图像序列落盘的单 EXE;复用 core 数学库(RXS-0104~0113)/ image-io(RXS-0114~0117)/ 软光栅 kernel(RXS-0118~0121),工程编排不新增 spec 语义面;全 safe(unsafe_code=deny)、纯函数·确定性——固定初值/固定步长两次运行逐帧 content SHA-256 逐字节一致,为 G-M7-1 确定性图像序列门铺底"
edition.workspace = true
version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
soft-raster = { path = "../soft-raster" }
image-io = { path = "../image-io" }
# G1.1 实时窗口呈现（feature d3d12-present）的 interop scope 帧 typestate 通路;可选,默认关。
rurix-rt = { path = "../rurix-rt", optional = true }

[features]
default = []
# d3d12-present：G1.1 `--present` 实时窗口呈现（RFC-0001 / RXS-0142~0143）。启用 interop scope
# 帧 typestate 通路（依赖 rurix-rt/d3d12-interop 类型面，stub shim）——**无 MSVC/D3D12 SDK 即可
# 编译验证 present 通路 + 帧 typestate 类型面**;运行期 shim 不可用。G0 kernel sr_*.rx 语义 0-byte。
d3d12-present = ["dep:rurix-rt", "rurix-rt/d3d12-interop"]
# d3d12-present-real：在 d3d12-present 之上经 rurix-rt/d3d12-interop-real 编译真实 D3D12 shim
# （需 MSVC + Windows SDK + 交互桌面会话）。仅 runner 窗口真跑（步骤 41）。
d3d12-present-real = ["d3d12-present", "rurix-rt/d3d12-interop-real"]
# **默认关闭**：常驻回归网 `cargo build/test/clippy --workspace` 维持离屏 PPM 路径而绿。

[lints]
workspace = true
